src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocations_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocations_StringErrorContext.class */
public final class ARBSampleLocations_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglFramebufferSampleLocationsfvARB(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("glFramebufferSampleLocationsfvARB(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("nglNamedFramebufferSampleLocationsfvARB(IIIJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("glNamedFramebufferSampleLocationsfvARB(IILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("glEvaluateDepthValuesARB()V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("glFramebufferSampleLocationsfvARB(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        methods.put("glNamedFramebufferSampleLocationsfvARB(II[F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBSampleLocationsErrorContext");
        return methods;
    }
}
